--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,10 @@
         }
     },
     "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+        "git": "latest",
+        "python": "3.11",
+        "node": "18"
     },
     "forwardPorts": [1883, 8883],
     "portsAttributes": {
