--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,11 @@
             "extensions": [
                 "ms-azuretools.vscode-docker",
                 "ms-python.python",
-                "editorconfig.editorconfig"
+                "editorconfig.editorconfig",
+                "ms-toolsai.jupyter",
+                "analytic-signal.preview-pdf",
+                "ms-python.pylint",
+                "ms-python.autopep8"
             ],
             "settings": {
                 "python.defaultInterpreterPath": "/usr/local/bin/python3.11"
