--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask
-flask-socketio
-matplotlib
-pandas
-paho-mqtt
+flask==3.0.3
+flask-socketio==5.3.6
+matplotlib==3.9.2
+pandas==2.2.2
+paho-mqtt==1.6.1
